--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -123,7 +123,11 @@
             <button type="button" class="btn btn-success m-1" onclick="">
               Undo
             </button>
-            <button type="button" class="btn btn-success m-1">
+            <button
+              type="button"
+              class="btn btn-success m-1"
+              onclick="partnership()"
+            >
               Partnerships
             </button>
             <button type="button" class="btn btn-success m-1">Extras</button>
