--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -61,8 +61,8 @@
         </thead>
         <tbody>
           <tr id="currentbowler">
-            <th scope="row" id="tableCurrentBowler">Jacob</th>
-            <th id="tableCurrentBowlerOver">0</th>
+            <td scope="row" id="tableCurrentBowler">Jacob</td>
+            <td id="tableCurrentBowlerOver">0</td>
             <td id="tableCurrentBowlerMaiden">0</td>
             <td id="tableCurrentBowlerRun">0</td>
             <td id="tableCurrentBowlerWicket">0</td>
